# openapi.yaml
@@ -36,6 +36,11 @@ tags:
     externalDocs:
       url: https://github.com/eliona-smart-building-assistant/hailo-app
 
+  - name: Customization
+    description: Help to customize Eliona
+    externalDocs:
+      url: https://github.com/eliona-smart-building-assistant/hailo-app
+
 paths:
 
   /configs:
@@ -121,20 +126,21 @@ paths:
         204:
           description: Successfully deletes configured FDS endpoint
 
-  /asset-mappings/:
+  /asset-mappings:
     get:
       tags:
         - Asset Mapping
+      summary: List all mapped assets
+      description: Delivers a List of all assets mapped to smart waste devices
       operationId: getAssetMappings
       parameters:
-        - name: config-id
+        - name: configId
           in: query
           description: Id of `Configuration` for which the Hail smart devices are mapped
           required: false
           schema:
             type: integer
             format: int64
-
       responses:
         200:
           description: Successfully returned asset mappings
@@ -144,6 +150,53 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/AssetMapping'
+
+  /dashboard-template-names:
+    get:
+      tags:
+        - Customization
+      summary: List available dashboard templates
+      description: Delivers all names for which the app provides dashboard templates.
+      operationId: getDashboardTemplateNames
+      responses:
+        200:
+          description: Successfully returned list of template names
+          content:
+            application/json:
+              schema:
+                description: Names of available dashboard templates
+                type: array
+                items:
+                  description: Name of the dashboard template
+                  type: string
+
+  /dashboard-templates/{dashboard-template-name}:
+    get:
+      tags:
+        - Customization
+      summary: Get a full dashboard template
+      description: Delivers a dashboard template which can assigned to users in Eliona
+      externalDocs:
+        description: The API to assign the dashboard to users in Eliona (see post /dashboards endpoint).
+        url: https://github.com/eliona-smart-building-assistant/eliona-api
+      operationId: getDashboardTemplateByName
+      parameters:
+        - name: dashboard-template-name
+          in: path
+          description: Name of the dashboard template
+          required: true
+          schema:
+            type: string
+            format: Smart Waste
+      responses:
+        200:
+          description: Successfully returned dashboard template
+          content:
+            application/json:
+              schema:
+                $ref: 'https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/develop/openapi.yaml#/components/schemas/Dashboard'
+        404:
+          description: Template with name not found
 
 components:
 
